# libscribe

./: CMakeLists.txt  make_headers.sh
examples/: profiler.c  record.c  replay.c  send_event.c
include/: list.h  scribe.h
include/linux/: scribe_api.h  scribe_defines.h  scribe_events.h  scribe_resource.h
src/: clone_x86_32.c  context.c  debug.c  eclone.h  init_process.c  process.c  profiler.c  record.c  replay.c  scribe.c
